# ApeTFT

./: .gitignore  ApeTFT.ino  MetSettings.csv  README.md
ref/: SquareLine Studio 1.5.4 Documentation - SquareLine Studio.url  esp-idf-components at master · espressif-esp-idf.url
src/: lv_conf.h  myApplMain.cpp  myApplMain.h  myClock.cpp  myClock.h  myDispCtrl.cpp  myDispCtrl.h  myIllum.cpp  myIllum.h  myLFW.cpp  myLFW.h  myNeut.cpp  myNeut.h  myOdoTrip.cpp  myOdoTrip.h  mySettingMgr.cpp  mySettingMgr.h  mySpeed.cpp  mySpeed.h  myTacho.cpp  myTacho.h
src/GFX Library for Arduino/src/: Arduino_GFX_Library.cpp  Arduino_GFX_Library.h
src/esp_lcd_axs15231b/: esp_lcd_axs15231b.c  esp_lcd_axs15231b.h  idf_component.yml
src/esp_lcd_touch/: esp_lcd_touch.h
src/lvgl/: library.properties  lvgl.h
src/lvgl/src/: lv_init.c
src/ui/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_events.cpp  ui_events.h  ui_helpers.c  ui_helpers.h
src/ui/components/: ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_tachobar.c  ui_comp_tachobar.h
src/ui/fonts/: ui_font_Font30.c  ui_font_N200.c  ui_font_NUM120.c  ui_font_Num60.c  ui_font_Sp100.c  ui_font_Sp200.c
src/ui/images/: ui_img_imgbg_dark_png.c  ui_img_imgbg_light_png.c  ui_img_imgdaylight_png.c  ui_img_imglfw_png.c  ui_img_imgneut_png.c  ui_img_imgopape_png.c  ui_img_imgophnd_png.c  ui_img_imgopkws_png.c  ui_img_imgopszk_png.c  ui_img_imgopymh_png.c  ui_img_imgtagauge_png.c
src/ui/screens/: ui_Clk.c  ui_Clk.h  ui_Dark.c  ui_Dark.h  ui_Light.c  ui_Light.h  ui_Opn.c  ui_Opn.h  ui_PlsSet.c  ui_PlsSet.h
(+9 files in other folders)
